[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Testing.gd" type="Script" id=1]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

signal newgraph

"

[node name="ChartRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChartBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataLine" type="Line2D" parent="ChartBackground"]
width = 3.0
default_color = Color( 0.4, 0.501961, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="ChartBackground"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ChartBackground/HBoxContainer"]
margin_left = 472.0
margin_right = 551.0
margin_bottom = 40.0
text = "New graph"
script = SubResource( 1 )

[node name="PointSlider" type="HSlider" parent="ChartBackground"]
anchor_right = 0.33
margin_left = 50.0
margin_top = 575.0
margin_right = -50.0
margin_bottom = 580.0
max_value = 1000.0
value = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ChartBackground/PointSlider"]
anchor_right = 1.0
margin_top = -11.0
margin_bottom = 3.0
text = "# of points in graph"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolatilitySlider" type="HSlider" parent="ChartBackground"]
anchor_left = 0.66
anchor_right = 1.0
margin_left = 50.0
margin_top = 575.0
margin_right = -50.0
margin_bottom = 580.0
min_value = 0.001
max_value = 0.25
step = 0.001
value = 0.025
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ChartBackground/VolatilitySlider"]
anchor_right = 1.0
margin_top = -11.0
margin_right = -0.159973
margin_bottom = 3.0
text = "volatility"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EverythingLoaded" type="Node" parent="."]
[connection signal="pressed" from="ChartBackground/HBoxContainer/Button" to="ChartBackground/DataLine" method="_New_Graph_Pressed"]
[connection signal="value_changed" from="ChartBackground/PointSlider" to="ChartBackground/DataLine" method="_on_PointSlider_value_changed"]
[connection signal="value_changed" from="ChartBackground/VolatilitySlider" to="ChartBackground/DataLine" method="_on_VolatilitySlider_value_changed"]
